<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>u_webrtc</name>
  <version>1.0.0</version>
  <description>ROS2 到 WebRTC 视频流传输桥接节点</description>
  
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 依赖 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- OpenCV 依赖 -->
  <depend>libopencv-dev</depend>
  
  <!-- JSON 库依赖 -->
  <depend>nlohmann-json-dev</depend>
  
  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



